@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+
+<iati-organisations>
+
+  <iati-organisation>
+    <iati-identifier>12345</iati-identifier>
+  </iati-organisation>
+
+</iati-organisations>
